--- a/arch/arm64/configs/lineage_zl1_defconfig
+++ b/arch/arm64/configs/lineage_zl1_defconfig
@@ -537,6 +537,8 @@ CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_BOOST=y
 
