Re-Add Support for le_x2
Change-Id: I831a7700182c6dd3363ff06adf628ac9a369267b

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.31 Kernel Configuration
+# Linux/arm64 3.18.36 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-BlackScreen-2.9"
+CONFIG_LOCALVERSION="-Blackscreen-2.9"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -280,21 +280,27 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_IOSCHED_FIOPS=y
-CONFIG_IOSCHED_TRIPNDROID=y 
-CONFIG_IOSCHED_SIOPLUS=y 
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_MAPLE=y
-#CONFIG_DEFAULT_DEADLINE is not set
-#CONFIG_DEFAULT_CFQ is not set
-CONFIG_DEFAULT_MAPLE=y
-# CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT CFQ is not set
-CONFIG_DEFAULT_IOSCHED="maple"
+CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_SWITCHER=y
+CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_MAPLE is not set
+# CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
+CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -314,6 +320,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_MSM8920 is not set
 # CONFIG_ARCH_MSM8940 is not set
 # CONFIG_ARCH_MSM8953 is not set
+# CONFIG_ARCH_SDM450 is not set
 # CONFIG_ARCH_MSM8937 is not set
 CONFIG_ARCH_MSM8996=y
 # CONFIG_ARCH_MSMCOBALT is not set
@@ -347,9 +354,6 @@ CONFIG_PCI_LABEL=y
 #
 # Kernel Features
 #
-CONFIG_LCD_NOTIFIER=y
-CONFIG_ADRENO_IDLER=y
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 #
 # ARM errata workarounds via the alternatives framework
@@ -366,6 +370,7 @@ CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_ICACHE_DISABLE is not set
 CONFIG_MSM_APP_API=y
 CONFIG_ENABLE_FP_SIMD_SETTINGS=y
+CONFIG_ARCH_MSM8953_SOC_SETTINGS=y
 CONFIG_MSM_APP_SETTINGS=y
 CONFIG_ARM64_VA_BITS_39=y
 CONFIG_ARM64_VA_BITS=39
@@ -375,17 +380,13 @@ CONFIG_ARM64_PGTABLE_LEVELS=3
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
-CONFIG_NR_CPUS=8
+CONFIG_NR_CPUS=4
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-# CONFIG_HZ_100 is not set
-# CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
-CONFIG_HZ_1000=y 
 CONFIG_HZ=1000
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -429,7 +430,7 @@ CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
-# CONFIG_ZSMALLOC is not set
+CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
@@ -481,7 +482,6 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM_RUNTIME=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_OPP=y
@@ -513,7 +513,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 #
 # CPU Frequency scaling
 #
-CONFIG_REGULATOR_CPR3_VOLTAGE_CONTROL=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_SCHED_FREQ_INPUT=y
@@ -523,31 +522,41 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NEBULA is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DESPAIR is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
-CONFIG_CPU_FREQ_GOV_DARKNESS=y
-CONFIG_CPU_FREQ_GOV_LIONFISH=y
-CONFIG_CPU_FREQ_GOV_NEBULA=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
-CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_NEBULA=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_DESPAIR=y
-CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_BOOST=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -607,22 +616,28 @@ CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
-#
-# TCP
-#
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
 CONFIG_TCP_CONG_VEGAS=y
 CONFIG_TCP_CONG_SCALABLE=y
 CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
-CONFIG_TCP_CONG_WESTWOOD=y
+# CONFIG_TCP_CONG_DCTCP is not set
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_HYBLA is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
@@ -1053,7 +1068,7 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
-CONFIG_NFC_NQ=y
+# CONFIG_NFC_NQ is not set
 CONFIG_IPC_ROUTER=y
 # CONFIG_IPC_ROUTER_SECURITY is not set
 CONFIG_HAVE_BPF_JIT=y
@@ -1135,9 +1150,8 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZSWAP=y
 CONFIG_ZRAM=y
-CONFIG_ZRAM_LZ4=y
+# CONFIG_ZRAM_LZ4_COMPRESS is not set
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
@@ -1196,6 +1210,7 @@ CONFIG_UID_CPUTIME=y
 CONFIG_TI_DRV2667=y
 # CONFIG_QPNP_MISC is not set
 CONFIG_IR_MAXQ616=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1898,7 +1913,7 @@ CONFIG_SERIAL_CORE=y
 # CONFIG_SERIAL_JSM is not set
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
-CONFIG_SERIAL_MSM_HSL_CONSOLE=y
+# CONFIG_SERIAL_MSM_HSL_CONSOLE is not set
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -2020,7 +2035,7 @@ CONFIG_SLIMBUS=y
 # CONFIG_SLIMBUS_MSM_CTRL is not set
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SOUNDWIRE=y
-# CONFIG_SOUNDWIRE_WCD_CTRL is not set
+CONFIG_SOUNDWIRE_WCD_CTRL=y
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
@@ -2191,7 +2206,7 @@ CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_BMS is not set
 # CONFIG_QPNP_LINEAR_CHARGER is not set
-# CONFIG_QPNP_TYPEC is not set
+CONFIG_QPNP_TYPEC=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_POWER_RESET=y
@@ -2501,6 +2516,7 @@ CONFIG_REGULATOR_SPM=y
 # CONFIG_REGULATOR_CPR is not set
 # CONFIG_REGULATOR_CPR2_GFX is not set
 CONFIG_REGULATOR_CPR3=y
+CONFIG_REGULATOR_CPR3_VOLTAGE_CONTROL=y
 CONFIG_REGULATOR_CPR3_HMSS=y
 CONFIG_REGULATOR_CPR3_MMSS=y
 # CONFIG_REGULATOR_CPR4_APSS is not set
@@ -2515,7 +2531,7 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 # CONFIG_MEDIA_ANALOG_TV_SUPPORT is not set
 # CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
-CONFIG_MEDIA_RADIO_SUPPORT=y
+# CONFIG_MEDIA_RADIO_SUPPORT is not set
 # CONFIG_MEDIA_SDR_SUPPORT is not set
 # CONFIG_MEDIA_RC_SUPPORT is not set
 CONFIG_MEDIA_CONTROLLER=y
@@ -2587,28 +2603,6 @@ CONFIG_MSM_JPEGDMA=y
 #
 # Supported MMC/SDIO adapters
 #
-CONFIG_RADIO_ADAPTERS=y
-# CONFIG_RADIO_SI470X is not set
-# CONFIG_RADIO_SI4713 is not set
-# CONFIG_USB_MR800 is not set
-# CONFIG_USB_DSBR is not set
-# CONFIG_RADIO_MAXIRADIO is not set
-# CONFIG_RADIO_SHARK is not set
-# CONFIG_RADIO_SHARK2 is not set
-# CONFIG_USB_KEENE is not set
-# CONFIG_USB_RAREMONO is not set
-# CONFIG_USB_MA901 is not set
-# CONFIG_RADIO_TEA5764 is not set
-# CONFIG_RADIO_SAA7706H is not set
-# CONFIG_RADIO_TEF6862 is not set
-# CONFIG_RADIO_WL1273 is not set
-
-#
-# Texas Instruments WL128x FM driver (ST based)
-#
-# CONFIG_RADIO_WL128X is not set
-# CONFIG_RADIO_IRIS is not set
-CONFIG_RADIO_SILABS=y
 # CONFIG_CYPRESS_FIRMWARE is not set
 
 #
@@ -2677,19 +2671,6 @@ CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 # CONFIG_SOC_CAMERA_OV9740 is not set
 # CONFIG_SOC_CAMERA_RJ54N1 is not set
 # CONFIG_SOC_CAMERA_TW9910 is not set
-CONFIG_MEDIA_TUNER=y
-CONFIG_MEDIA_TUNER_SIMPLE=y
-CONFIG_MEDIA_TUNER_TDA8290=y
-CONFIG_MEDIA_TUNER_TDA827X=y
-CONFIG_MEDIA_TUNER_TDA18271=y
-CONFIG_MEDIA_TUNER_TDA9887=y
-CONFIG_MEDIA_TUNER_TEA5761=y
-CONFIG_MEDIA_TUNER_TEA5767=y
-CONFIG_MEDIA_TUNER_MT20XX=y
-CONFIG_MEDIA_TUNER_XC2028=y
-CONFIG_MEDIA_TUNER_XC5000=y
-CONFIG_MEDIA_TUNER_XC4000=y
-CONFIG_MEDIA_TUNER_MC44S803=y
 
 #
 # Tools to develop new frontends
@@ -2785,11 +2766,12 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_HDMI_MHL_SII8334 is not set
 # CONFIG_FB_MSM_MDSS_MHL3 is not set
-# CONFIG_FB_MSM_MDSS_HDMI_MHL_SII6400 is not set
+CONFIG_FB_MSM_MDSS_HDMI_MHL_SII6400=y
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -3000,7 +2982,9 @@ CONFIG_SND_SOC_WCD9335=y
 CONFIG_SND_SOC_WCD9XXX=y
 CONFIG_SND_SOC_WCD9XXX_V2=y
 CONFIG_SND_SOC_WCD_CPE=y
+CONFIG_SND_SOC_WCD_MBHC=y
 CONFIG_AUDIO_EXT_CLK=y
+# CONFIG_SND_SOC_WCD_MBHC is not set
 # CONFIG_SND_SOC_WM8510 is not set
 # CONFIG_SND_SOC_WM8523 is not set
 # CONFIG_SND_SOC_WM8580 is not set
@@ -3023,6 +3007,11 @@ CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SND_SOC_ES9018=y
 CONFIG_SND_SOC_TFA98XX=y
 # CONFIG_SND_SOC_MAX98927 is not set
+CONFIG_SOUND_CONTROL=y
+CONFIG_POWERSUSPEND=y
+CONFIG_QUICK_WAKEUP=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_STATE_NOTIFIER=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -3040,7 +3029,7 @@ CONFIG_HID_GENERIC=y
 #
 # CONFIG_HID_A4TECH is not set
 # CONFIG_HID_ACRUX is not set
-CONFIG_HID_APPLE=y
+# CONFIG_HID_APPLE is not set
 # CONFIG_HID_APPLEIR is not set
 # CONFIG_HID_AUREAL is not set
 # CONFIG_HID_BELKIN is not set
@@ -3051,7 +3040,7 @@ CONFIG_HID_APPLE=y
 # CONFIG_HID_CYPRESS is not set
 # CONFIG_HID_DRAGONRISE is not set
 # CONFIG_HID_EMS_FF is not set
-CONFIG_HID_ELECOM=y
+# CONFIG_HID_ELECOM is not set
 # CONFIG_HID_ELO is not set
 # CONFIG_HID_EZKEY is not set
 # CONFIG_HID_HOLTEK is not set
@@ -3068,7 +3057,7 @@ CONFIG_HID_ELECOM=y
 # CONFIG_HID_LCPOWER is not set
 # CONFIG_HID_LENOVO is not set
 # CONFIG_HID_LOGITECH is not set
-CONFIG_HID_MAGICMOUSE=y
+# CONFIG_HID_MAGICMOUSE is not set
 CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_MONTEREY is not set
 CONFIG_HID_MULTITOUCH=y
@@ -3289,7 +3278,7 @@ CONFIG_USB_SERIAL=y
 # CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_APPLEDISPLAY is not set
 # CONFIG_USB_SISUSBVGA is not set
-# CONFIG_ANALOGIX_OHIO is not set
+CONFIG_ANALOGIX_OHIO=y
 # CONFIG_USB_LD is not set
 # CONFIG_USB_TRANCEVIBRATOR is not set
 # CONFIG_USB_IOWARRIOR is not set
@@ -3300,12 +3289,13 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 # CONFIG_USB_EZUSB_FX2 is not set
 # CONFIG_USB_HSIC_USB3503 is not set
 # CONFIG_USB_LINK_LAYER_TEST is not set
+CONFIG_USB_CCLOGIC=y
 CONFIG_USB_CCLOGIC_PI5USB=y
 CONFIG_USB_CCLOGIC_TUSB302L=y
-CONFIG_USB_CCLOGIC_PTN5150=y
-CONFIG_USB_CCLOGIC_PER30216=y
-CONFIG_USB_CCLOGIC_TUSB320=y
-CONFIG_USB_CYCCG=y 
+# CONFIG_USB_CCLOGIC_PTN5150 is not set
+# CONFIG_USB_CCLOGIC_PER30216 is not set
+# CONFIG_USB_CCLOGIC_TUSB320 is not set
+CONFIG_USB_CYCCG=y
 
 #
 # USB Physical Layer drivers
@@ -3669,6 +3659,7 @@ CONFIG_ION_MSM=y
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_SND_SOC_WCD_MBHC_ZL1 is not set
 CONFIG_PRODUCT_LE_X2=y
+# CONFIG_PRODUCT_LE_ZL1 is not set
 
 #
 # Qualcomm Atheros CLD WLAN module
@@ -3741,7 +3732,7 @@ CONFIG_MSM_QDSP6_APRV2=y
 CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_MEMORY_DUMP is not set
 CONFIG_MSM_MEMORY_DUMP_V2=y
-# CONFIG_DEEP_SLEEP_LED_SWITCH is not set
+CONFIG_DEEP_SLEEP_LED_SWITCH=y
 # CONFIG_MSM_DEBUG_LAR_UNLOCK is not set
 # CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
@@ -3808,12 +3799,13 @@ CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 CONFIG_MSM_QBT1000=y
-# CONFIG_MSM_PACMAN is not set
+CONFIG_MSM_PACMAN=y
 CONFIG_MSM_KERNEL_PROTECT=y
 # CONFIG_MSM_KERNEL_PROTECT_MPU is not set
 # CONFIG_MSM_KERNEL_PROTECT_TEST is not set
 # CONFIG_MSM_REMOTEQDSS is not set
 CONFIG_QCOM_SMCINVOKE=y
+CONFIG_ASMP=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -3891,6 +3883,7 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+CONFIG_ADRENO_IDLER=y
 
 #
 # DEVFREQ Drivers
@@ -3951,7 +3944,6 @@ CONFIG_EFI_RUNTIME_WRAPPERS=y
 CONFIG_EFI_ARMSTUB=y
 CONFIG_MSM_TZ_LOG=y
 # CONFIG_BIF is not set
-# CONFIG_MOBICORE_DRIVER is not set
 
 #
 # Letv driver support
@@ -3985,14 +3977,6 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_FS_ENCRYPTION is not set
 # CONFIG_EXT4_DEBUG is not set
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_FS_XATTR=y
-# CONFIG_F2FS_FS_POSIX_ACL is not set
-CONFIG_F2FS_FS_SECURITY=y
-# CONFIG_F2FS_CHECK_FS is not set
-# CONFIG_F2FS_FS_ENCRYPTION is not set
-# CONFIG_F2FS_FAULT_INJECTION is not set
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
@@ -4007,7 +3991,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
-# CONFIG_FS_ENCRYPTION is not set
+CONFIG_FS_ENCRYPTION=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4336,6 +4320,8 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_DEBUG_RODATA is not set
+CONFIG_ALUCARD_HOTPLUG=y
+CONFIG_LAZYPLUG=y
 
 #
 # Security options
@@ -4343,7 +4329,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 CONFIG_KEYS=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
-# CONFIG_ENCRYPTED_KEYS is not set
+CONFIG_ENCRYPTED_KEYS=y
 # CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 
 #
@@ -4414,7 +4400,7 @@ CONFIG_CRYPTO_SEQIV=y
 #
 CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTR=y
-# CONFIG_CRYPTO_CTS is not set
+CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
 # CONFIG_CRYPTO_PCBC is not set
@@ -4433,6 +4419,9 @@ CONFIG_CRYPTO_XCBC=y
 #
 CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32=y
+CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_CRYPTO_SHA256_ARM64=y
+CONFIG_CRYPTO_SHA512_ARM64=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 # CONFIG_CRYPTO_GHASH is not set
 CONFIG_CRYPTO_MD4=y
@@ -4578,22 +4567,3 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
-
-#
-# Hotplug
-#
-CONFIG_ALUCARD_HOTPLUG=y
-CONFIG_ASMP=y
-CONFIG_LAZYPLUG=y
-#########
-CONFIG_CRYPTO_CRC32_ARM64=y
-CONFIG_CRYPTO_SHA256_ARM64=y
-CONFIG_CRYPTO_SHA512_ARM64=y
-CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_SOUND_CONTROL=y
-CONFIG_POWERSUSPEND=y
-CONFIG_QUICK_WAKEUP=y
-CONFIG_DYNAMIC_FSYNC=y 
-CONFIG_STATE_NOTIFIER=y
-
