--- a/arch/arm64/configs/lineage_zl1_defconfig
+++ b/arch/arm64/configs/lineage_zl1_defconfig
@@ -535,6 +535,8 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_BOOST=y
 
