--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -375,7 +375,7 @@ CONFIG_ARM64_PGTABLE_LEVELS=3
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
-CONFIG_NR_CPUS=8
+CONFIG_NR_CPUS=4
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_PREEMPT_NONE is not set
@@ -513,7 +513,7 @@ CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
@@ -525,7 +525,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -3947,7 +3947,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
-CONFIG_FS_ENCRYPTION=y
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4277,7 +4277,7 @@ CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_KEYS=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
-CONFIG_ENCRYPTED_KEYS=y
+# CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 
 #
@@ -4348,7 +4348,7 @@ CONFIG_CRYPTO_SEQIV=y
 #
 CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTR=y
-CONFIG_CRYPTO_CTS=y
+# CONFIG_CRYPTO_CTS is not set
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
 # CONFIG_CRYPTO_PCBC is not set
