--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-blackscreen"
+CONFIG_LOCALVERSION="-Blackscreen-1.7"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -288,16 +288,17 @@ CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_TRIPNDROID=y
-# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
-CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_TRIPNDROID is not set
-CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_DEFAULT_IOSCHED="deadline"
+CONFIG_IOSCHED_SWITCHER=y
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -382,7 +383,11 @@ CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ=100
+# CONFIG_HZ=100 is not set
+# CONFIG_HZ_250 is not set
+# CONFIG_HZ_300 is not set
+CONFIG_HZ_1000=y 
+CONFIG_HZ=1000
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -535,6 +540,11 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_NEBULA=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
@@ -4290,6 +4300,8 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_DEBUG_RODATA is not set
 CONFIG_ALUCARD_HOTPLUG=y
+#########
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # Security options
