--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -620,7 +620,7 @@ config IR_MAXQ616
           IR maxq616 remote support
 config FORCE_FAST_CHARGE
 	bool "Force faster charge rate for USB"
-	default n
+	default y
 	help
 	  This allows users to override default charge rate for USB
 
