--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Blackscreen-1.8.5"
+CONFIG_LOCALVERSION="-Blackscreen-2.1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -286,10 +286,12 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
@@ -627,14 +629,14 @@ CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 # CONFIG_TCP_CONG_DCTCP is not set
 # CONFIG_DEFAULT_BIC is not set
-CONFIG_DEFAULT_CUBIC=y
+# CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
 # CONFIG_DEFAULT_HYBLA is not set
 # CONFIG_DEFAULT_VEGAS is not set
 # CONFIG_DEFAULT_VENO is not set
-# CONFIG_DEFAULT_WESTWOOD is not set
+CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -3869,6 +3871,7 @@ CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 #
 # DEVFREQ Drivers
@@ -4057,7 +4060,8 @@ CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_EFIVAR_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
@@ -4300,9 +4304,11 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_DEBUG_RODATA is not set
 CONFIG_ALUCARD_HOTPLUG=y
+CONFIG_ASMP=y
 #########
 CONFIG_FORCE_FAST_CHARGE=y
-
+CONFIG_FINGERPRINT_BOOST=y
+CONFIG_SOUND_CONTROL=y
 #
 # Security options
 #
