dts: adjust LA.UM camera resources to LA.HB compatibility
Signed-off-by: Ícaro Hoff <icarohoff@gmail.com>

--- a/arch/arm/boot/dts/qcom/msm8996-camera.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-camera.dtsi
@@ -45,7 +45,7 @@
 			"ispif_ahb_clk", "csiphy_timer_src_clk",
 			"csiphy_timer_clk", "camss_ahb_clk",
 			"csiphy_3p_clk_src", "csi_phy_3p_clk";
-		/* G.S.: Adjust and update the API by zeroing third column. */
+		/* G.S.: Adjust 7th column to OEM value. */
 		qcom,clock-rates = <0 0 0 200000000 0 0 320000000 0>;
 	};
 
