--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.51 Kernel Configuration
+# Linux/arm64 3.18.36 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Blackscreen-2.4"
+CONFIG_LOCALVERSION="-Blackscreen-2.4.5"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -280,19 +280,20 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ZEN=y
-CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_SWITCHER=y
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
@@ -300,7 +301,6 @@ CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
-CONFIG_IOSCHED_SWITCHER=y
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -320,6 +320,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_MSM8920 is not set
 # CONFIG_ARCH_MSM8940 is not set
 # CONFIG_ARCH_MSM8953 is not set
+CONFIG_ARCH_SDM450=y
 # CONFIG_ARCH_MSM8937 is not set
 CONFIG_ARCH_MSM8996=y
 # CONFIG_ARCH_MSMCOBALT is not set
@@ -369,6 +370,7 @@ CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_ICACHE_DISABLE is not set
 CONFIG_MSM_APP_API=y
 CONFIG_ENABLE_FP_SIMD_SETTINGS=y
+CONFIG_ARCH_MSM8953_SOC_SETTINGS=y
 CONFIG_MSM_APP_SETTINGS=y
 CONFIG_ARM64_VA_BITS_39=y
 CONFIG_ARM64_VA_BITS=39
@@ -385,10 +387,6 @@ CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-# CONFIG_HZ=100 is not set
-# CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
-CONFIG_HZ_1000=y 
 CONFIG_HZ=1000
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -526,14 +524,17 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NEBULA is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DESPAIR is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -542,19 +543,21 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_NEBULA=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_LIONFISH=y
-CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_DESPAIR=y
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_FINGERPRINT_BOOST=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -1208,6 +1211,7 @@ CONFIG_UID_CPUTIME=y
 CONFIG_TI_DRV2667=y
 # CONFIG_QPNP_MISC is not set
 CONFIG_IR_MAXQ616=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1910,6 +1914,7 @@ CONFIG_SERIAL_CORE=y
 # CONFIG_SERIAL_JSM is not set
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
+# CONFIG_SERIAL_MSM_HSL_CONSOLE is not set
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -2766,6 +2771,7 @@ CONFIG_FB_MSM_MDSS_HDMI_MHL_SII6400=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -3000,6 +3006,7 @@ CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SND_SOC_ES9018=y
 CONFIG_SND_SOC_TFA98XX=y
 # CONFIG_SND_SOC_MAX98927 is not set
+CONFIG_SOUND_CONTROL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -3793,6 +3800,7 @@ CONFIG_MSM_KERNEL_PROTECT=y
 # CONFIG_MSM_KERNEL_PROTECT_TEST is not set
 # CONFIG_MSM_REMOTEQDSS is not set
 CONFIG_QCOM_SMCINVOKE=y
+CONFIG_ASMP=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -3871,7 +3879,6 @@ CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
 CONFIG_ADRENO_IDLER=y
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 #
 # DEVFREQ Drivers
@@ -3932,7 +3939,6 @@ CONFIG_EFI_RUNTIME_WRAPPERS=y
 CONFIG_EFI_ARMSTUB=y
 CONFIG_MSM_TZ_LOG=y
 # CONFIG_BIF is not set
-# CONFIG_MOBICORE_DRIVER is not set
 
 #
 # Letv driver support
@@ -3966,8 +3972,6 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_FS_ENCRYPTION is not set
 # CONFIG_EXT4_DEBUG is not set
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_FS_SECURITY=y
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
@@ -4312,11 +4316,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_DEBUG_RODATA is not set
 CONFIG_ALUCARD_HOTPLUG=y
-CONFIG_ASMP=y
-#########
-CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_FINGERPRINT_BOOST=y
-CONFIG_SOUND_CONTROL=y
+
 #
 # Security options
 #
@@ -4412,7 +4412,7 @@ CONFIG_CRYPTO_XCBC=y
 # Digest
 #
 CONFIG_CRYPTO_CRC32C=y
-# CONFIG_CRYPTO_CRC32 is not set
+CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 # CONFIG_CRYPTO_GHASH is not set
 CONFIG_CRYPTO_MD4=y
