defconfig: enable powersuspend and quick_wakeup
Change-Id: Ieeb9a1b547decad8189f85fe2b9ea5c57ea82764

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -3007,6 +3007,8 @@ CONFIG_SND_SOC_ES9018=y
 CONFIG_SND_SOC_TFA98XX=y
 # CONFIG_SND_SOC_MAX98927 is not set
 CONFIG_SOUND_CONTROL=y
+CONFIG_POWERSUSPEND=y
+CONFIG_QUICK_WAKEUP=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
