defconfig: enable dynamic fsync
Change-Id: I5ad1023d6118a98ea41fa9b2e6ecb62b7a31ccbd

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -3009,6 +3009,7 @@ CONFIG_SND_SOC_TFA98XX=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_POWERSUSPEND=y
 CONFIG_QUICK_WAKEUP=y
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
