defconfig: enable State Notifier
Change-Id: I9ddb734459f998fcf9eb8924366ae1bcc35ff2c5

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -3010,6 +3010,7 @@ CONFIG_SOUND_CONTROL=y
 CONFIG_POWERSUSPEND=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_STATE_NOTIFIER=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
