Revert "add Alucard Hotplug", and enable lazyplug by default
This reverts commit 83ebb2f827d0abff0d68374ad12b19306b93a237.

Change-Id: Id656c4319333e9417fb2a81cee7445ef28ce6f6a

--- a/arch/arm64/configs/lineage_zl1_defconfig
+++ b/arch/arm64/configs/lineage_zl1_defconfig
@@ -3805,8 +3805,8 @@ CONFIG_TRACER_PKT=y
 CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_ICNSS is not set
 # CONFIG_MSM_BAM_DMUX is not set
-CONFIG_MSM_PERFORMANCE is not set
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+# CONFIG_MSM_PERFORMANCE is not set
+# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
@@ -4578,7 +4578,6 @@ CONFIG_QMI_ENCDEC=y
 #
 # Hotplug
 #
-CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_ASMP=y
 CONFIG_LAZYPLUG=y
 #########
