--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -358,10 +358,10 @@ CONFIG_PCI_LABEL=y
 #
 # ARM errata workarounds via the alternatives framework
 #
-CONFIG_ARM64_ERRATUM_826319=y
-CONFIG_ARM64_ERRATUM_827319=y
-CONFIG_ARM64_ERRATUM_824069=y
-CONFIG_ARM64_ERRATUM_819472=y
+# CONFIG_ARM64_ERRATUM_826319=y
+#CONFIG_ARM64_ERRATUM_827319=y
+# CONFIG_ARM64_ERRATUM_824069=y
+# CONFIG_ARM64_ERRATUM_819472=y
 CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
 CONFIG_ARM64_4K_PAGES=y
