--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -1,6 +1,21 @@
-ifeq ($(CONFIG_PRODUCT_LE_X2),y)
-dtb-$(CONFIG_ARCH_MSM8996) += \
-	msm8996-v2-pmi8994-le_x2-evt.dtb \
+ifeq ($(CONFIG_MACH_LEECO_MSM8996),y)
+    ifeq ($(CONFIG_MACH_MAX_PLUS),y)
+dtb-$(CONFIG_ARCH_MSM8996) += msm8996-v2-pmi8994-max_plus-dvt1.dtb \
+	msm8996-v2-pmi8994-max_plus-dvt1.1.dtb \
+	msm8996-v3-pmi8994-max_plus-dvt1.dtb \
+	msm8996-v3-pmi8994-max_plus-dvt1.1.dtb \
+	msm8996-v3-pmi8994-max_plus-dvt3.dtb \
+	msm8996-v3-pmi8994-max_plus-pvt.dtb \
+	msm8996-v3-pmi8996-max_plus-dvt1.1.dtb \
+	msm8996-v3-pmi8996-max_plus-dvt3.dtb \
+	msm8996-v3-pmi8996-max_plus-pvt.dtb \
+	msm8996-v3-pmi8994-max_plus-dvt1.1.11.ad.dtb
+    endif
+    ifeq ($(CONFIG_MACH_X10),y)
+dtb-$(CONFIG_ARCH_MSM8996) += msm8996pro-pmi8996-le_x10-evt.dtb
+    endif
+    ifeq ($(CONFIG_MACH_X2),y)
+dtb-$(CONFIG_ARCH_MSM8996) += msm8996-v2-pmi8994-le_x2-evt.dtb \
 	msm8996-v2-pmi8994-le_x2-dvt1.dtb \
 	msm8996-v3-pmi8994-le_x2-evt.dtb \
 	msm8996-v3-pmi8994-le_x2-dvt1.dtb \
@@ -23,18 +38,41 @@ dtb-$(CONFIG_ARCH_MSM8996) += \
 	msm8996-v3-pmi8996-le_x2_na-pvt.dtb \
 	msm8996-v3-pmi8994-le_x2_na-pvt.dtb \
 	msm8996pro-v3-pmi8996-le_x2-pvt.dtb
-endif
-
-ifeq ($(CONFIG_PRODUCT_LE_ZL1),y)
-dtb-$(CONFIG_ARCH_MSM8996) += \
-	msm8996-v3-pmi8996-le_zl1-evt.dtb \
+    endif
+    ifeq ($(CONFIG_MACH_X5),y)
+dtb-$(CONFIG_ARCH_MSM8996) += msm8996-v3-pmi8994-le_x5-evt.dtb \
+	msm8996-v3-pmi8994-le_x5-dvt1.dtb \
+	msm8996-v3-pmi8996-le_x5-evt.dtb \
+	msm8996-v3-pmi8996-le_x5-dvt1.dtb \
+	msm8996-v3-pmi8996-le_x5-dvt2.dtb \
+	msm8996-v3-pmi8994-le_x5-dvt2.dtb \
+	msm8996pro-pmi8996-le_x5-dvt1.dtb \
+	msm8996pro-pmi8996-le_x5-dvt2.dtb \
+	msm8996-v3-pmi8996-le_x5-dvt2.1.dtb \
+	msm8996-v3-pmi8994-le_x5-dvt2.1.dtb \
+	msm8996pro-pmi8996-le_x5-dvt2.1.dtb
+    endif
+    ifeq ($(CONFIG_MACH_X51),y)
+dtb-$(CONFIG_ARCH_MSM8996) += msm8996-v3-pmi8996-le_x51-dvt1.dtb \
+	msm8996-v3-pmi8996-le_x51-dvt2.dtb \
+	msm8996pro-pmi8996-le_x51-dvt1.dtb \
+	msm8996pro-pmi8996-le_x51-dvt2.dtb
+    endif
+    ifeq ($(CONFIG_MACH_TURBO),y)
+dtb-$(CONFIG_ARCH_MSM8996) += msm8996pro-pmi8996-le_turbo-evt.dtb \
+	msm8996pro-pmi8996-le_turbo-dvt1.dtb \
+	msm8996pro-pmi8996-le_turbo_ww-evt.dtb \
+	msm8996pro-pmi8996-le_turbo_ww-dvt1.dtb
+    endif
+    ifeq ($(CONFIG_MACH_ZL1),y)
+dtb-$(CONFIG_ARCH_MSM8996) += msm8996-v3-pmi8996-le_zl1-evt.dtb \
 	msm8996-v3-pmi8996-le_zl1-dvt1.dtb \
 	msm8996pro-pmi8996-le_zl1-dvt1.dtb \
 	msm8996pro-pmi8996-le_zl1-na.dtb \
 	msm8996pro-pmi8996-le_zl1-pvt.dtb
-endif
-
-#dtb-$(CONFIG_ARCH_MSM8996) += msm8996-v2-pmi8994-cdp.dtb \
+    endif
+else
+dtb-$(CONFIG_ARCH_MSM8996) += msm8996-v2-pmi8994-cdp.dtb \
 	msm8996-v2-pmi8994-mtp.dtb \
 	msm8996-v2-pmi8994-pmk8001-cdp.dtb \
 	msm8996-v2-pmi8994-pmk8001-mtp.dtb \
@@ -45,8 +83,6 @@ endif
 	msm8996-v2-fluid.dtb \
 	msm8996-v2-liquid.dtb \
 	msm8996-v2-dtp.dtb \
-	msm8996-v3-auto-cdp.dtb \
-	msm8996-v3-auto-adp.dtb \
 	msm8996-v3-pmi8994-cdp.dtb \
 	msm8996-v3-pmi8994-mtp.dtb \
 	msm8996-v3-pmi8994-pmk8001-cdp.dtb \
@@ -64,8 +100,6 @@ endif
 	msm8996-v3-dtp.dtb \
 	msm8996-v3-pm8004-mmxf-adp.dtb \
 	msm8996-v3-pm8004-agave-adp.dtb \
-	msm8996pro-auto-adp.dtb \
-	msm8996pro-auto-cdp.dtb \
 	msm8996pro-pmi8994-cdp.dtb \
 	msm8996pro-pmi8994-mtp.dtb \
 	msm8996pro-pmi8994-pmk8001-cdp.dtb \
@@ -78,7 +112,6 @@ endif
 	msm8996pro-pmi8996-mtp.dtb \
 	msm8996pro-pmi8996-pmk8001-cdp.dtb \
 	msm8996pro-pmi8996-pmk8001-mtp.dtb \
-	msm8996pro-v1.1-auto-cdp.dtb \
 	msm8996pro-v1.1-pmi8994-cdp.dtb \
 	msm8996pro-v1.1-pmi8994-mtp.dtb \
 	msm8996pro-v1.1-pmi8994-pmk8001-cdp.dtb \
@@ -91,6 +124,7 @@ endif
 	msm8996pro-v1.1-pmi8996-mtp.dtb \
 	msm8996pro-v1.1-pmi8996-pmk8001-cdp.dtb \
 	msm8996pro-v1.1-pmi8996-pmk8001-mtp.dtb \
+	apq8096pro-liquid.dtb \
 	msm8996-v3.0-pmi8994-cdp.dtb \
 	msm8996-v3.0-pmi8994-mtp.dtb \
 	msm8996-v3.0-pmi8994-pm8004-cdp.dtb \
@@ -101,7 +135,119 @@ endif
 	msm8996-v3.0-pmi8996-mtp.dtb \
 	msm8996-v3.0-fluid.dtb \
 	msm8996-v3.0-liquid.dtb \
-	msm8996-v3.0-dtp.dtb
+	msm8996-v3.0-dtp.dtb \
+	apq8096-v2-pmi8994-cdp.dtb \
+	apq8096-v2-pmi8994-mtp.dtb \
+	apq8096-v2-pmi8994-pmk8001-cdp.dtb \
+	apq8096-v2-pmi8994-pm8004-cdp.dtb \
+	apq8096-v2-pmi8994-pm8004-pmk8001-cdp.dtb \
+	apq8096-v2-liquid.dtb \
+	apq8096-v2-dragonboard.dtb \
+	apq8096-v2-auto-dragonboard.dtb \
+	apq8096-v3-pmi8994-cdp.dtb \
+	apq8096-v3-pmi8994-mtp.dtb \
+	apq8096-v3-pmi8994-pmk8001-cdp.dtb \
+	apq8096-v3-pmi8994-pm8004-cdp.dtb \
+	apq8096-v3-pmi8994-pm8004-pmk8001-cdp.dtb \
+	apq8096-v3-pmi8996-cdp.dtb \
+	apq8096-v3-pmi8996-mtp.dtb \
+	apq8096-v3-liquid.dtb \
+	apq8096-v3-dragonboard.dtb \
+	apq8096-v3-mediabox.dtb \
+	apq8096-v3-sbc.dtb \
+	apq8096-v3-auto-dragonboard.dtb \
+	apq8096-v3.0-pmi8994-cdp.dtb \
+	apq8096-v3.0-pmi8994-mtp.dtb \
+	apq8096-v3.0-pmi8994-pm8004-cdp.dtb \
+	apq8096-v3.0-pmi8994-pm8004-pmk8001-cdp.dtb \
+	apq8096-v3.0-pmi8994-pmk8001-cdp.dtb \
+	apq8096-v3.0-pmi8996-cdp.dtb \
+	apq8096-v3.0-pmi8996-mtp.dtb \
+	apq8096-v3.0-liquid.dtb \
+	apq8096-v3.0-dragonboard.dtb \
+	apq8096-v3-pmi8994-mdm9x55-i2s-cdp.dtb \
+	apq8096-v3-pmi8994-pm8004-mdm9x55-i2s-cdp.dtb \
+	apq8096-v3-pmi8994-pm8004-pmk8001-mdm9x55-i2s-cdp.dtb \
+	apq8096-v3-pmi8994-pmk8001-mdm9x55-i2s-cdp.dtb \
+	apq8096-v3-pmi8996-mdm9x55-i2s-cdp.dtb \
+	apq8096-v3-pmi8994-mdm9x55-i2s-mtp.dtb \
+	apq8096-v3-pmi8994-mdm9x55-slimbus-mtp.dtb \
+	apq8096-v3-pmi8996-mdm9x55-i2s-mtp.dtb \
+	apq8096-v3-pmi8996-mdm9x55-slimbus-mtp.dtb \
+	apq8096-v3-pmi8996-dragonboard.dtb
+endif
+
+dtb-$(CONFIG_ARCH_MSMCOBALT) += msmcobalt-sim.dtb \
+	msmcobalt-rumi.dtb
+
+dtb-$(CONFIG_ARCH_MDM9640) += mdm9640-sim.dtb \
+	mdm9640-rumi.dtb \
+	mdm9640-emmc-cdp.dtb \
+	mdm9640-nand-cdp.dtb \
+	mdm9640-mtp.dtb
+
+dtb-$(CONFIG_ARCH_MDMCALIFORNIUM) += mdmcalifornium-sim.dtb \
+	mdmcalifornium-rumi.dtb \
+	mdmcalifornium-emmc-cdp.dtb \
+	mdmcalifornium-nand-cdp.dtb \
+	mdmcalifornium-emmc-mtp.dtb \
+	mdmcalifornium-nand-mtp.dtb
+
+dtb-$(CONFIG_ARCH_MSM8937) += msm8937-rumi.dtb \
+	msm8937-pmi8950-cdp.dtb \
+	msm8937-pmi8937-cdp.dtb \
+	msm8937-pmi8950-ext-codec-cdp.dtb \
+	msm8937-pmi8950-mtp.dtb \
+	msm8937-pmi8937-mtp.dtb \
+	msm8937-pmi8950-rcm.dtb \
+	msm8937-pmi8937-rcm.dtb \
+	msm8937-pmi8950-qrd-sku1.dtb \
+	msm8937-pmi8937-qrd-sku2.dtb \
+	msm8937-pmi8950-qrd-sku1-dvt1.dtb \
+	msm8937-pmi8937-qrd-sku2-dvt1.dtb \
+	apq8037-pmi8950-cdp.dtb \
+	apq8037-pmi8937-cdp.dtb \
+	apq8037-pmi8950-mtp.dtb \
+	apq8037-pmi8937-mtp.dtb
+
+dtb-$(CONFIG_ARCH_MSMGOLD) += msmgold-rumi.dtb \
+	apqgold-pmi8937-cdp.dtb \
+	apqgold-pmi8937-mtp.dtb \
+	apqgold-pmi8950-cdp.dtb \
+	apqgold-pmi8950-mtp.dtb \
+	msmgold-pmi8937-cdp.dtb \
+	msmgold-pmi8937-mtp.dtb \
+	msmgold-pmi8950-cdp.dtb \
+	msmgold-pmi8950-ext-codec-cdp.dtb \
+	msmgold-pmi8950-mtp.dtb \
+	msmgold-pmi8937-rcm.dtb \
+	msmgold-pmi8950-rcm.dtb
+
+dtb-$(CONFIG_ARCH_MSMTITANIUM) += msmtitanium-sim.dtb \
+	msmtitanium-rumi.dtb \
+	msmtitanium-cdp.dtb \
+	msmtitanium-mtp.dtb \
+	msmtitanium-ext-codec-mtp.dtb \
+	msmtitanium-qrd-sku3.dtb \
+	msmtitanium-rcm.dtb \
+	msmtitanium-ext-codec-rcm.dtb \
+	apqtitanium-cdp.dtb \
+	apqtitanium-mtp.dtb
+
+dtb-$(CONFIG_ARCH_MDM9607) += mdm9607-rumi.dtb \
+	mdm9607-cdp.dtb \
+	mdm9607-mtp.dtb \
+	mdm9607-rcm.dtb \
+	mdm9607-mtp-sdcard.dtb
+
+dtb-$(CONFIG_ARCH_MSM8916) += msm8952-qrd-skum.dtb \
+       msm8952-cdp.dtb \
+       msm8952-ext-codec-cdp.dtb \
+       msm8952-mtp.dtb
+
+dtb-$(CONFIG_ARCH_MSM8909) += msm8909-pm8916-mtp.dtb \
+	msm8909w-wtp.dtb \
+	apq8009w-wtp.dtb
 
 ifeq ($(CONFIG_ARM64),y)
 always          := $(dtb-y)
