--- a/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
@@ -595,7 +595,7 @@
 				qcom,default-state = "off";
 				linux,name = "red";
 				linux,default-trigger =
-					"none";
+					"battery-charging";
 				qcom,start-idx = <0>;
 				qcom,ramp-step-ms = <100>;
 				qcom,duty-pcts = [00 03 06 09 0c 0f 12 15 18 1b 1e
@@ -614,7 +614,7 @@
 				qcom,max-current = <12>;
 				qcom,default-state = "off";
 				linux,name = "green";
-				linux,default-trigger = "none";
+				linux,default-trigger = "battery-full";
 				qcom,start-idx = <0>;
 				qcom,ramp-step-ms = <100>;
 				qcom,duty-pcts = [00 03 06 09 0c 0f 12 15 18 1b 1e
@@ -633,7 +633,7 @@
 				qcom,max-current = <12>;
 				qcom,default-state = "off";
 				linux,name = "blue";
-				linux,default-trigger = "none";
+				linux,default-trigger = "boot-indication";
 				qcom,start-idx = <0>;
 				qcom,ramp-step-ms = <100>;
 				qcom,duty-pcts = [00 03 06 09 0c 0f 12 15 18 1b 1e
