--- a/arch/arm/boot/dts/qcom/msm8996-v3.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-v3.dtsi
@@ -48,8 +48,7 @@
 		<  401800000  5  5 >,
 		<  510000000  6  5 >,
 		<  560000000  7  7 >,
-                <  729600000  8  7 >;
-
+		<  624000000  8  7 >;
 	qcom,gfxfreq-mx-speedbin0 =
 		<	   0  0 >,
 		<  133000000  4 >,
@@ -58,7 +57,7 @@
 		<  401800000  5 >,
 		<  510000000  5 >,
 		<  560000000  7 >,
-                <  729600000  7 >;
+		<  624000000  7 >;
 
 	qcom,gfxfreq-speedbin1 =
 		<	   0  0  0 >,
@@ -66,14 +65,31 @@
 		<  214000000  3  4 >,
 		<  315000000  4  4 >,
 		<  401800000  5  5 >,
-                <  560000000  6  5 >;
+		<  510000000  6  5 >;
 	qcom,gfxfreq-mx-speedbin1 =
 		<	   0  0 >,
 		<  133000000  4 >,
 		<  214000000  4 >,
 		<  315000000  4 >,
 		<  401800000  5 >,
-                <  560000000  5 >;
+		<  510000000  5 >;
+
+	qcom,gfxfreq-speedbin2 =
+		<          0  0  0 >,
+		<  133000000  2  4 >,
+		<  214000000  3  4 >,
+		<  315000000  4  4 >,
+		<  401800000  5  5 >,
+		<  510000000  6  5 >,
+		<  560000000  7  7 >;
+	qcom,gfxfreq-mx-speedbin2 =
+		<          0  0 >,
+		<  133000000  4 >,
+		<  214000000  4 >,
+		<  315000000  4 >,
+		<  401800000  5 >,
+		<  510000000  5 >,
+		<  560000000  7 >;
 };
 
 &gdsc_gpu_gx {
@@ -118,11 +134,11 @@
 
 			qcom,speed-bin = <0>;
 
-			qcom,initial-pwrlevel = <6>;
+			qcom,initial-pwrlevel = <5>;
 
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
-				qcom,gpu-freq = <729600000>;
+				qcom,gpu-freq = <624000000>;
 				qcom,bus-freq = <12>;
 				qcom,bus-min = <11>;
 				qcom,bus-max = <12>;
@@ -195,7 +211,7 @@
 
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
-				qcom,gpu-freq = <560000000>;
+				qcom,gpu-freq = <510000000>;
 				qcom,bus-freq = <9>;
 				qcom,bus-min = <8>;
 				qcom,bus-max = <10>;
@@ -481,6 +497,23 @@
 			< 1190400000 11 >,
 			< 1228800000 12 >,
 			< 1363200000 13 >;
+		qcom,pwrcl-speedbin2-v0 =
+			<          0  0 >,
+			<  307200000  1 >,
+			<  422400000  2 >,
+			<  480000000  3 >,
+			<  556800000  4 >,
+			<  652800000  5 >,
+			<  729600000  6 >,
+			<  844800000  7 >,
+			<  960000000  8 >,
+			< 1036800000  9 >,
+			< 1113600000 10 >,
+			< 1190400000 11 >,
+			< 1228800000 12 >,
+			< 1324800000 13 >,
+			< 1401600000 14 >,
+			< 1497600000 15 >;
 		qcom,perfcl-speedbin0-v0 =
 			<          0  0 >,
 			<  307200000  1 >,
@@ -531,6 +564,30 @@
 			< 1708800000 19 >,
 			< 1785600000 20 >,
 			< 1804800000 21 >;
+		qcom,perfcl-speedbin2-v0 =
+			<          0  0 >,
+			<  307200000  1 >,
+			<  403200000  2 >,
+			<  480000000  3 >,
+			<  556800000  4 >,
+			<  652800000  5 >,
+			<  729600000  6 >,
+			<  806400000  7 >,
+			<  883200000  8 >,
+			<  940800000  9 >,
+			< 1036800000 10 >,
+			< 1113600000 11 >,
+			< 1190400000 12 >,
+			< 1248000000 13 >,
+			< 1324800000 14 >,
+			< 1401600000 15 >,
+			< 1478400000 16 >,
+			< 1555200000 17 >,
+			< 1632000000 18 >,
+			< 1708800000 19 >,
+			< 1785600000 20 >,
+			< 1804800000 21 >,
+			< 1900800000 22 >;
 		qcom,cbf-speedbin0-v0 =
 			<	   0  0 >,
 			<  307200000  1 >,
@@ -554,6 +611,23 @@
 			< 1593600000 19 >;
 		qcom,cbf-speedbin1-v0 =
 			<	   0  0 >,
+			<  307200000  1 >,
+			<  384000000  2 >,
+			<  460800000  3 >,
+			<  537600000  4 >,
+			<  595200000  5 >,
+			<  672000000  6 >,
+			<  748800000  7 >,
+			<  825600000  8 >,
+			<  902400000  9 >,
+			<  979200000 10 >,
+			< 1056000000 11 >,
+			< 1132800000 12 >,
+			< 1190400000 13 >,
+			< 1228800000 14 >,
+			< 1305600000 15 >;
+		qcom,cbf-speedbin2-v0 =
+			<          0  0 >,
 			<  307200000  1 >,
 			<  384000000  2 >,
 			<  460800000  3 >,
