--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -60,7 +60,6 @@
 			qcom,limits-info = <&mitigation_profile0>;
 			enable-method = "psci";
 			qcom,ea = <&ea0>;
-			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L2_0: l2-cache {
 			      compatible = "arm,arch-cache";
@@ -83,7 +82,6 @@
 			qcom,limits-info = <&mitigation_profile1>;
 			enable-method = "psci";
 			qcom,ea = <&ea1>;
-			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L1_D_1: l1-dcache {
 				compatible = "arm,arch-cache";
@@ -101,7 +99,6 @@
 			qcom,limits-info = <&mitigation_profile2>;
 			enable-method = "psci";
 			qcom,ea = <&ea2>;
-			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L2_1: l2-cache {
 			      compatible = "arm,arch-cache";
@@ -124,7 +121,6 @@
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile3>;
 			qcom,ea = <&ea3>;
-			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L1_D_101: l1-dcache {
 				compatible = "arm,arch-cache";
@@ -156,123 +152,6 @@
 				};
 			};
 		};
-		energy-costs {
-			CPU_COST_0: core-cost0 {
-				busy-cost-data = <
-					149 90
-					205 121
-					229 142
-					253 164
-					296 198
-					350 239
-					406 306
-					469 371
-					491 430
-					527 486
-					572 541
-					584 586
-					630 651
-					666 732
-					711 827
-					763 925
-					941 1661
-				>;
-				idle-cost-data = <
-			  		2 2 0
-				>;
-			};
-			CPU_COST_1: core-cost1 {
-				busy-cost-data = <
-					149 93
-					197 116
-					229 142
-					253 164
-					296 198
-					350 239
-					372 270
-					400 310
-					445 345
-					495 400
-					527 486
-					572 541
-					598 567
-					630 651
-					666 732
-					711 827
-					743 865
-					780 946
-					812 1040
-					850 1097
-					868 1209
-					914 1311
-					961 1441
-					988 1535
-					1024 1715
-				>;
-				idle-cost-data = <
-				      2 2 0
-				>;
-			};
-			CLUSTER_COST_0: cluster-cost0 {
-				busy-cost-data = <
-					149 4
-					205 4
-					229 4
-					253 4
-					296 4
-					350 8
-					406 9
-					460 16
-					491 21
-					527 22
-					572 29
-					584 32
-					630 42
-					666 49
-					711 41
-					763 52
-					941 67
-				>;
-				idle-cost-data = <
-					0
-					0
-				>;
-			};
-			CLUSTER_COST_1: cluster-cost1 {
-				busy-cost-data = <
-					149 4
-					197 4
-					229 4
-					253 4
-					296 4
-					350 4
-					372 7
-					400 10
-					445 15
-					495 16
-					527 21
-					572 22
-					598 29
-					630 32
-					666 42
-					711 49
-					743 41
-					780 52
-					812 62
-					850 69
-					868 75
-					914 81
-					961 90
-					988 93
-					1024 96
-				>;
-				idle-cost-data = <
-					0
-					0
-				>;
-			};
-		};
-
 	};
 
 	soc: soc { };
@@ -318,10 +197,11 @@
 			size = <0 0x5c00000>;
 		};
 
-		pstore_reserve_mem: pstore_reserve_mem_region {
+		ramoops_mem: ramoops_region@91500000 {
 			compatible = "shared-dma-pool";
 			no-map;
 			reg = <0 0x91500000 0 0x00100000>;
+			label = "ramoops_mem";
 		};
 
 		modem_mem: modem_region@88800000 {
@@ -364,6 +244,19 @@
 	#size-cells = <1>;
 	ranges = <0 0 0 0xffffffff>;
 	compatible = "simple-bus";
+
+	ramoops {
+		compatible = "ramoops";
+		status = "ok";
+		android,ramoops-buffer-start = <0x91500000>;
+		android,ramoops-buffer-size =  <0x100000>;
+		android,ramoops-console-size = <0x60000>;
+		android,ramoops-record-size = <0x10000>;
+		android,ramoops-ftrace-size = <0x10000>;
+		android,ramoops-pmsg-size = <0x20000>;
+		android,ramoops-dump-oops = <0x1>;
+		memory-region = <&ramoops_mem>;
+	};
 
 	apc_apm: apm@099e0000 {
 		compatible = "qcom,msm-apm";
@@ -1907,7 +1800,7 @@
 			label = "dsps";
 		};
 
-		qcom,smd-rpm-summary {
+		qcom,smd-rpm {
 			compatible = "qcom,smd";
 			qcom,smd-edge = <15>;
 			qcom,smd-irq-offset = <0x0>;
@@ -2405,18 +2298,15 @@
 	qcom,cnss {
 		compatible = "qcom,cnss";
 		wlan-bootstrap-gpio = <&tlmm 46 0>;
-		vdd-wlan-en-supply = <&wlan_en_vreg>;
+		wlan-en-gpio = <&pm8994_gpios 8 0>;
 		vdd-wlan-supply = <&rome_vreg>;
 		vdd-wlan-io-supply = <&pm8994_s4>;
 		vdd-wlan-xtal-supply = <&pm8994_l30>;
 		vdd-wlan-core-supply = <&pm8994_s3>;
 		wlan-ant-switch-supply = <&pm8994_l18_pin_ctrl>;
-		qcom,wlan-en-vreg-support;
-		qcom,enable-bootstrap-gpio;
 		qcom,notify-modem-status;
-		pinctrl-names = "bootstrap_active", "bootstrap_sleep";
-		pinctrl-0 = <&cnss_bootstrap_active>;
-		pinctrl-1 = <&cnss_bootstrap_sleep>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&cnss_default>;
 		qcom,wlan-rc-num = <0>;
 		qcom,wlan-ramdump-dynamic = <0x200000>;
 
@@ -3130,12 +3020,12 @@
 		qcom,tasha-mclk-clk-freq = <9600000>;
 		asoc-platform = <&pcm0>, <&pcm1>, <&pcm2>, <&voip>, <&voice>,
 				<&loopback>, <&compress>, <&hostless>,
-				<&afe>, <&lsm>, <&routing>, <&cpe>, <&pcmnoirq>;
+				<&afe>, <&lsm>, <&routing>, <&cpe>, <&compr>;
 		asoc-platform-names = "msm-pcm-dsp.0", "msm-pcm-dsp.1", "msm-pcm-dsp.2",
 				"msm-voip-dsp", "msm-pcm-voice", "msm-pcm-loopback",
 				"msm-compress-dsp", "msm-pcm-hostless", "msm-pcm-afe",
 				"msm-lsm-client", "msm-pcm-routing", "msm-cpe-lsm",
-				"msm-pcm-dsp-noirq";
+				"msm-compr-dsp";
 		asoc-cpu = <&dai_pri_auxpcm>, <&dai_sec_auxpcm>, <&dai_hdmi>, <&dai_mi2s>,
 				<&sb_0_rx>, <&sb_0_tx>, <&sb_1_rx>, <&sb_1_tx>,
 				<&sb_2_rx>, <&sb_2_tx>, <&sb_3_rx>, <&sb_3_tx>,
@@ -3197,14 +3087,12 @@
 		compatible = "qcom,msm-pcm-routing";
 	};
 
-	compress: qcom,msm-compress-dsp {
-		compatible = "qcom,msm-compress-dsp";
+	compr: qcom,msm-compr-dsp {
+		compatible = "qcom,msm-compr-dsp";
 	};
 
-	pcmnoirq: qcom,msm-pcm-dsp-noirq {
-		compatible = "qcom,msm-pcm-dsp-noirq";
-		qcom,msm-pcm-low-latency;
-		qcom,latency-level = "ultra";
+	compress: qcom,msm-compress-dsp {
+		compatible = "qcom,msm-compress-dsp";
 	};
 
 	voip: qcom,msm-voip-dsp {
