--- a/arch/arm/boot/dts/qcom/msmtitanium.dtsi
+++ b/arch/arm/boot/dts/qcom/msmtitanium.dtsi
@@ -254,10 +254,8 @@
 		reg-names = "tsens_physical", "tsens_eeprom_physical";
 		interrupts = <0 184 0>, <0 314 0>;
 		interrupt-names = "tsens-upper-lower", "tsens-critical";
-		qcom,client-id = <1 2 3 4 5 6 7 8 9 10 11 12 13 14 15>;
-		qcom,sensor-id = <1 2 3 4 5 6 7 8 9 10 11 12 13 14 15>;
-		qcom,sensors = <15>;
-		qcom,slope = <3200 3200 3200 3200 3200 3200 3200 3200
+		qcom,sensors = <16>;
+		qcom,slope = <3200 3200 3200 3200 3200 3200 3200 3200 3200
 					3200 3200 3200 3200 3200 3200 3200>;
 		qcom,valid-status-check;
 	};
@@ -2150,11 +2148,6 @@
 		clock-names = "aux_clk", "pipe_clk", "cfg_ahb_clk", "phy_reset",
 			      "phy_phy_reset", "ref_clk_src", "ref_clk";
 
-	};
-
-	usb_audio_qmi_dev {
-		compatible = "qcom,usb-audio-qmi-dev";
-		qcom,usb-audio-intr-num = <2>;
 	};
 
 	dbm_1p5: dbm@70f8000 {
