--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -91,7 +91,10 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_BSD_PROCESS_ACCT is not set
-# CONFIG_TASKSTATS is not set
+CONFIG_TASKSTATS=y
+# CONFIG_TASK_DELAY_ACCT is not set
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
 
 #
 # RCU Subsystem
@@ -3634,7 +3637,8 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDER_DEVICES="binder"
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+#CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -4479,7 +4483,7 @@ CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRYPTO_DEV_OTA_CRYPTO=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
 # CONFIG_CRYPTO_DEV_CCP is not set
-CONFIG_ASYMMETRIC_KEY_TYPE=y
+# CONFIG_ASYMMETRIC_KEY_TYPE is not set
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_PUBLIC_KEY_ALGO_RSA=y
 CONFIG_X509_CERTIFICATE_PARSER=y
@@ -4578,3 +4582,5 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_CRYPTO_CRC32_ARM64=y
+
+CONFIG_UID_SYS_STATS=y
