--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -2457,7 +2457,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_WM8994 is not set
 # CONFIG_WCD9306_CODEC is not set
 # CONFIG_WCD9320_CODEC is not set
-CONFIG_WCD9330_CODEC=y
+# CONFIG_WCD9330_CODEC is not set
 CONFIG_WCD9335_CODEC=y
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
@@ -2752,7 +2752,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_HDMI_MHL_SII8334 is not set
 # CONFIG_FB_MSM_MDSS_MHL3 is not set
-CONFIG_FB_MSM_MDSS_HDMI_MHL_SII6400=y
+# CONFIG_FB_MSM_MDSS_HDMI_MHL_SII6400 is not set
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
