defconfig: enable optimized SHA-256/224

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -4579,3 +4579,4 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_CRYPTO_SHA256_ARM=y
