--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.31 Kernel Configuration
+# Linux/arm64 3.18.91 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -35,6 +35,12 @@ CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
+CONFIG_QUICK_WAKEUP=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_KEYS_COMPAT=y
 #
 # General setup
 #
@@ -431,7 +437,9 @@ CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
 #CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
-# CONFIG_TRANSPARENT_HUGEPAGE is not set
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
+# CONFIG_TRANSPARENT_HUGEPAGE_MADVISE is not set
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
